hatdog/_Inline/build/Ampon_exer4_pl_d71c/cmd.out
Products.java:7: error: cannot find symbol
	Resultset rs;
	^
  symbol:   class Resultset
  location: class Products
1 error
